--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,15 @@
     "doctrine/dbal": "Use custom Doctrine types for UUIDv7/ULID."
   },
   "require-dev": {
-    "phpunit/phpunit": "^11.0"
+    "phpunit/phpunit": "^11.0",
+    "phpstan/phpstan": "^1.11",
+    "vimeo/psalm": "^5.0",
+    "phpbench/phpbench": "^1.2"
   },
   "scripts": {
-    "test": "phpunit --testdox"
+    "test": "phpunit --testdox",
+    "analyse": "phpstan analyse && psalm --no-cache",
+    "bench": "phpbench run benchmarks --report=default"
   },
   "keywords": [
     "php",
